tests/syntax_errors/test88_2.tl
-- test case 17.
-- Description : stupid function

-- Expected : '0'
require "ifj21" 
function AAAAAA()                 
   write("AAAAAA() is stupid")  
end                               
function main()                   
   AAAAAA(555)                       
end                               
main()                            

